# keyof

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
keyof/: __init__.py  compat.py  mypy_plugin.py
tests/: conftest.py  plugin_compat_test.py  plugin_test.py  test_keyof.py
